Fix responsiveness on tablet

--- a/styles/interests.css
+++ b/styles/interests.css
@@ -78,6 +78,12 @@ body {
   }
 }
 
+/* style on normal tablet */
+@media (max-width: 1024px) {
+  .article__wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+}
 /* Small Mobile */
 @media only screen and (max-width: 480px) {
   .article__wrapper {
